<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_a_level"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="24dp" />

        <Button
            android:id="@+id/btnLvl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_1"
            android:textSize="18sp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="#ffffff"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btnLvl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_2"
            android:textSize="18sp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="#ffffff"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btnLvl3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_3"
            android:textSize="18sp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="#ffffff"
            android:layout_marginBottom="16dp" />


    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_menu2"
        android:textSize="18sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
