<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <!-- Play! gomb -->
    <Button
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:textSize="20sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="#ffffff"
        android:layout_marginBottom="20dp" />

    <!-- ScoreBoard gomb -->
    <Button
        android:id="@+id/btnScoreboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreboard"
        android:textSize="20sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="#ffffff"
        android:layout_marginBottom="20dp" />

    <!-- Exit gomb -->
    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textSize="20sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="#ffffff" />

</LinearLayout>
